[package]
name = "pylon-collector"
version = "1.1.0"
authors = ["carter <carter@pylon.money>", "Terraform Labs, PTE."]
edition = "2018"
description = "A Collector contract for Pylon Protocol - collect all rewards and send it to staking contract"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = "0.9.1"
cw20 = "0.9.1"
cw-storage-plus = "0.9.1"
cosmwasm-std = "0.16.3"
cosmwasm-storage = "0.16.3"
pylon-token = { version = "0.2.0", path = "../../packages/pylon_token" }
pylon-utils = "0.2.0"
terra-cosmwasm = "2.2.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "0.16.3"
