[package]
name = "pylon-gov"
version = "1.2.0"
authors = ["carter@pylon.money", "Terraform Labs, PTE."]
edition = "2018"
license = "Apache-2.0"
description = "A Goverance contract for Pylon Protocol - allows a user to create poll and do vote"
repository = "https://github.com/pylon-protocol/pylon-token-contracts"
homepage = "https://pylon.money"
documentation = "https://docs.pylon.money"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { version = "0.9.1" }
cw20 = { version = "0.9.1" }
cosmwasm-std = { version = "0.16.3", features = ["iterator"] }
cosmwasm-storage = { version = "0.16.3", features = ["iterator"] }
pylon-token = { version = "0.2.0", path = "../../packages/pylon_token" }
pylon-utils = { version = "0.2.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
terraswap = { version = "2.4.0" }
thiserror = { version = "1.0.20" }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
